src/static/index.css
.log, .command, .button {
	margin-top: 0.3rem;
	margin-bottom: 0.3rem;
	padding: 0.35rem 0.35rem 0.35rem 0.35rem;
	margin-left: 0.5em;
	margin-right: 0.5em;
	font-family: Verdana, Geneva, sans-serif;
	font-size: 1.2em;
	-webkit-border-radius: 0.94rem;
	-moz-border-radius: 0.94rem;
	border-radius: 0.94rem;
	-webkit-box-shadow: 0.06rem 0.06rem 0.19rem #000000;
	-moz-box-shadow: 0.06rem 0.06rem 0.19rem #000000;
	box-shadow: 0.06rem 0.06rem 0.19rem #000000;
	float: none;
	display: block;
}

.hidden {
	text-indent: 100%;
	white-space: nowrap;
    overflow: hidden;
	height: 0%;
}

.header {
	background-repeat: no-repeat;
	background-image: url('static/waves.svg');
	background-size: cover;
	background-position: center;
	
}

.commandform {
	height: 100vh;
	width: 100vw;
	margin: 0;
	padding: 0; 
	box-sizing: border-box;	
}

.log {
	color: #888888;
	text-align: left;
	background-color: #000000;

	display: flex;
	flex-direction: column-reverse;

	position: absolute;
	height: 40%;
	
	width: 97%;
	overflow-y: scroll;
 	
	scroll-behavior: smooth;

}

.command {
	width: 98%;
	background-color: lightgray;
}

.button {
	box-shadow: 0.10rem 0.10rem 0.30rem 0.00rem #1c1b18;
	background:linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%);
	background-color:#eae0c2;
	display:inline-block;
	cursor:pointer;
	color:#505739;
	font-weight:bold;
	float: right;

}

html {
	font-size: 1.2em;
	background-color: antiquewhite;
	color:darkslategray;
}

body {

	overflow-x: hidden;
	padding-left: 0;
	margin-left: 0;
}

h1 {
	margin-top: 0.4rem;
	margin-left: 1.6rem;
}

h2 {
	font-size:  1.0em;
	margin-top: 0.3rem;
	margin-bottom: 0.3rem;
	margin-left: 1.6rem;
}

.container {
	display: grid; 
	grid-auto-columns: 1fr; 
	grid-template-rows: minmax(min-content,0.1fr) minmax(min-content,1.0fr) 2.3fr; 
	gap: 0px 0px; 
	width: 100%;
	height: 100%;
	overflow: hidden;
	position: relative;
  
}

.header_area, .command_area, .log_area {

}

.header_area { grid-area: 1 / 1 / 2 / 2; }
.command_area { grid-area: 2 / 1 / 3 / 2; }
.log_area { grid-area: 3 / 1 / 4 / 2; }

